# pkgbuild-generator

./: .gitignore  Cargo.toml  README.md  script.sh
.github/workflows/: push.yml  release.yml
src/: consts.rs  generator.rs  main.rs  utils.rs
src/generators/: casaos.rs  casaos_app_management.rs  casaos_cli.rs  casaos_gateway.rs  casaos_local_storage.rs  casaos_message_bus.rs  casaos_ui.rs  casaos_user_service.rs  mod.rs
